Added more components for the program

--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -8,6 +8,7 @@
       "typescript": "2.5.2"
    },
    "dependencies": {
+      "graphql-iso-date": "^3.6.1",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "^0.2.7",
