--- a/react-client/package.json
+++ b/react-client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@okta/okta-react": "^1.1.3",
+    "@okta/okta-signin-widget": "^2.13.0",
     "apollo": "^1.9.2",
     "apollo-boost": "^0.1.16",
     "graphql": "^14.0.2",
